# asset-manager

./: .gitignore  LICENSE  acknowledgement.md  mkdocs.yml
asset-client/asset-core/: conftest.py  pyproject.toml
asset-client/asset-core/asset_core/api/: settings_api.py
asset-client/asset-core/asset_core/api/repo_api/: add.py  info.py  init.py  remove.py  switch.py  upload.py  version.py
asset-client/asset-core/asset_core/api/repo_api/tests/: test_add.py
asset-client/asset-core/asset_core/api/store_api/: clone_asset.py  fetch.py  find.py  list.py
asset-client/asset-core/asset_core/asset/: asset.py  asset_diff.py  asset_uploader.py  serializable_asset.py
asset-client/asset-core/asset_core/asset/fetchers/: asset_fetcher.py
asset-client/asset-core/asset_core/configs/: auth_config.py  configs.py  server_config.py  user_settings.py
asset-client/asset-core/asset_core/configs/client_configs/: assets_home_config.py
asset-client/asset-core/asset_core/server/: asset_server.py  auth_server.py  base_server.py
asset-client/asset-core/asset_core/store/: asset_store.py  repo.py
asset-client/asset-manager/: conftest.py  pyproject.toml
asset-client/asset-manager/asset_manager/: app.py  app_debug.py
asset-client/asset-manager/asset_manager/commands/alias_actions/: __init__.py  alias_add.py  alias_help.py
asset-client/asset-manager/asset_manager/commands/asset_actions/: __init__.py  add.py  fetch.py  history.py  info.py  list.py  version.py
asset-client/asset-manager/asset_manager/commands/auth_actions/: auth_signup.py
asset-client/asset-manager/asset_manager/commands/store_actions/: store_clear.py  store_prune.py
asset-client/asset-manager/asset_manager/debug_configs/asset/: asset_add.py  asset_debug.py  asset_diff.py  asset_download.py  asset_info.py  asset_status.py  asset_switch.py  asset_union.py  asset_upload.py  parser.py
asset-client/asset-manager/asset_manager/debug_configs/refs/: refs_add.py  refs_debug.py
asset-client/asset-manager/asset_manager/debug_configs/store/: asset_clone.py  asset_config.py  asset_find.py  store_debug.py
asset-client/asset-manager/asset_manager/interface/: base.py
asset-client/asset-manager/asset_manager/python_api/: artifact.py  asset.py  store.py
asset-client/asset-manager/test_data/: 10.yaml  11.yaml  2.yaml  3.yaml  5.yaml  7.yaml
asset-client/asset-pluggy/: pyproject.toml
asset-client/asset-pluggy/asset_pluggy/plugin/: object_manager.py
asset-client/asset-pluggy/asset_pluggy/storage/: asset_storage.py  storage_utils.py
asset-client/asset-pluggy/asset_pluggy/storage/blob/: blob_data.py  storage_data.py
asset-client/asset-pluggy/asset_pluggy/storage/transporter/: transport_resource.py  transporter.py
asset-client/asset-plugin-gcs/: conftest.py  pyproject.toml
asset-client/asset-plugin-gcs/asset_plugin_gcs/: gcs_storage.py
asset-client/asset-plugin-gcs/asset_plugin_gcs/transporter/async_gcs/: async_gcs_transporter.py
asset-client/asset-plugin-gcs/test_data/mock_bucket/sample_csvs/: customers.csv.__blobdata__  income.csv  income.csv.__blobdata__
asset-client/asset-plugin-posix/: pyproject.toml
asset-client/asset-plugin-posix/asset_plugin_posix/transporter/: async_posix_transporter.py  async_shutil.py  posix_transport_resource.py
asset-client/asset-plugin-posix/asset_plugin_posix/transporter/tests/: test_async_posix_transporter.py
asset-client/asset-plugin-s3/: conftest.py  pyproject.toml
asset-client/asset-plugin-s3/asset_plugin_s3/: aws_http_handler.py  aws_mount_handler.py  aws_storage.py
asset-client/asset-plugin-s3/asset_plugin_s3/tests/: test_aws_storage.py
asset-client/asset-plugin-s3/asset_plugin_s3/transporter/: aws_transport_resource.py
asset-client/asset-plugin-s3/asset_plugin_s3/transporter/async_aws/: async_aws_transporter.py  async_copy.py  async_upload.py
asset-client/asset-plugin-s3/test_data/file_types/flat/: class_list.yaml
asset-client/asset-plugin-s3/test_data/file_types/flat/csvs/: jordan_test_datagroup_1.csv  (+1 more)
backend/server-core/: README.md  conftest.py  pyproject.toml
backend/server-core/server_core/: app.py
backend/server-core/server_core/asset_client/tests/: test_data.json  test_data2.json
backend/server-core/server_core/configs/: configs.py
backend/server-core/server_core/configs/yamls/: dev_configs.yaml  test_configs.yaml
backend/server-core/server_core/elastic/: output.json  sample_data.json  sample_data2.json
backend/server-core/server_core/models/tests/: from_client.json  objects_data.json  test_data.json
backend/server-core/server_core/views/auth_views/: auth_utils.py  cli_login_view.py  web_login_view.py
backend/server-core/server_core/views/js_client_views/: __init__.py  asset_class_view.py  asset_objct_view.py  asset_ref_view.py  asset_settings_view.py  asset_version_view.py  asset_view.py  bucket_view.py  content_view.py  elastic_view.py  issue_view.py  project_view.py  signed_url_view.py  tags_view.py  template_view.py  user_role_view.py  webhook_view.py
backend/server-core/server_core/views/python_client_views/: asset_class_view.py  asset_commit_view.py  asset_ref_view.py  asset_version_view.py  asset_view.py  bucket_proxy_view.py  project_view.py  tag_view.py
backend/server-core/server_core/views/utils/: asset_updater.py
client/asset-contents/: pyproject.toml
client/asset-core/: pyproject.toml  pytest.ini
client/asset-core/asset_core/api/templates/: diff_style.css
client/asset-db/: pyproject.toml
client/asset-manager/: conftest.py  pyproject.toml
client/asset-manager/test_data/: 1.yaml  12.yaml  13.yaml  14.yaml  15.yaml  4.yaml  6.yaml  8.yaml  9.yaml
client/asset-pluggy/: conftest.py  pyproject.toml
client/asset-plugin-gcr/: pyproject.toml
client/asset-plugin-gcs/: pyproject.toml
client/asset-plugin-gcs/test_data/file_types/yamls/: sample3.yaml
client/asset-plugin-gcs/test_data/mock_bucket/sample_yamls/: invoice.yaml.__blobdata__  model.yml.__blobdata__  sample3.yaml.__blobdata__
client/asset-plugin-s3/: conftest.py  pyproject.toml
client/asset-plugin-s3/asset_plugin_s3/mounted_bucket/: mount.md
(+648 files in other folders)
