[build-system]
requires = ["setuptools>=68.0.0,<69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-pluggy"
version = "1.0.0"
description = "plugin handler for asset-manager"
readme = "README.md"
authors = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
maintainers = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
license = { text = "@2024 Roche Sequencing Solution" }
requires-python = ">=3.10,<3.11"  # "==3.10.*"
dependencies = [
    "aiofiles==0.7.*",
    "asset-utils==1.*",
    "pluggy==1.5.*",
    "tabulate==0.8.*"
]

[tool.setuptools.packages.find]
include = ["*"]
namespaces = false
