[build-system]
requires = ["setuptools>=68.0.0,<69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-plugin-gcs"
version = "1.0.0"
description = "GCS backend provider for asset-manager"
readme = "README.md"
authors = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
maintainers = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
license = { text = "@2024 Roche Sequencing Solution" }
requires-python = ">=3.10,<3.11"  # "==3.10.*"
dependencies = [
    "aiohttp>=3.3.0,<4.0.0",
    "asset-contents==1.*",
    "asset-pluggy==1.*",
    "asset-utils==1.*",
    "backoff==2.2.*",
    "cached_property==1.5.*",
    "gcloud-aio-auth==5.3.*",
    "gcloud-aio-storage==9.3.*",
    "google-cloud-storage==2.10.*",
    "pyopenssl==24.0.*",
    "speedtest-cli==2.1.*"
]

[tool.setuptools.packages.find]
include = ["*"]
namespaces = false
