[build-system]
requires = ["setuptools>=68.0.0,<69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-core"
version = "1.6.3"
description = "asset-core package for asset-manager"
readme = "README.md"
authors = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
maintainers = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
license = { text = "@2021 Roche Sequencing Solution" }
requires-python = ">=3.10,<3.11"  # "==3.10.*"
dependencies = [
    "asset-contents==0.2.*",
    "asset-db==0.2.*",
    "asset-pluggy==1.1.*",
    "asset-utils==1.*",
    "google-auth-oauthlib==0.4.*",
    "jinja2==3.1.*",
    "packaging==23.1.*",
    "pathspec==0.12.*"
]

# flat layout: https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#flat-layout
# disable implicit namespaces.
[tool.setuptools.packages.find]
include = ["*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"asset_core.configs.yamls" = ["*.yaml"]
"asset_core.api.templates" = ["*.html"]
