[build-system]
requires = ["setuptools>=68.0.0,<69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ama-db"
version = "1.0.0"
description = "DB Plugin for asset-manager"
readme = "README.md"
license = { text = "@2021 Roche Sequencing Solution" }
requires-python = ">=3.10,<3.11"  # "==3.10.*"
dependencies = [
    "ama-pluggy==1.*",
    "ama-utils==1.*"
]

[tool.setuptools.packages.find]
include = ["*"]
namespaces = false
