[build-system]
requires = ["setuptools>=68.0.0,<69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-db"
version = "0.2.2"
description = "DB Plugin for asset-manager"
readme = "README.md"
license = { text = "@2021 Roche Sequencing Solution" }
requires-python = ">=3.10,<3.11"  # "==3.10.*"
dependencies = [
    "asset-pluggy==1.*",
    "asset-utils==1.*"
]

[tool.setuptools.packages.find]
include = ["*"]
namespaces = false
