[build-system]
requires = ["setuptools>=68.0.0,<69.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ama-plugin-gcr"
version = "1.0.0"
description = "GCR backend provider for asset-manager"
readme = "README.md"
authors = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
maintainers = [
    { name = "Swarup Mahanti", email = "swarup.mahanti@roche.com" }
]
license = { text = "@2021 Roche Sequencing Solution" }
requires-python = ">=3.10,<3.11"  # "==3.10.*"
dependencies = [
    "ama-contents==1.*",
    "ama-pluggy==1.*",
    "ama-utils==1.*",
    "backoff==2.2.*",
    "google-auth==2.15.*",
    "pyopenssl==24.0.*",
    "speedtest-cli==2.1.*"
]

[tool.setuptools.packages.find]
include = ["*"]
namespaces = false
